@@ -353,7 +353,7 @@ int proc_countbit(NetworkServer *net, Link *link, const Request &req, Response *
 	return 0;
 }
 
-int proc_redis_bitcount(NetworkServer *net, Link *link, const Request &req, Response *resp){
+int proc_bitcount(NetworkServer *net, Link *link, const Request &req, Response *resp){
 	SSDBServer *serv = (SSDBServer *)net->data;
 	CHECK_NUM_PARAMS(2);
 	CHECK_KV_KEY_RANGE(1);
@@ -363,16 +363,16 @@ int proc_redis_bitcount(NetworkServer *net, Link *link, const Request &req, Resp
 	if(req.size() > 2){
 		start = req[2].Int();
 	}
-	int size = -1;
+	int end = -1;
 	if(req.size() > 3){
-		size = req[3].Int();
+		end = req[3].Int();
 	}
 	std::string val;
 	int ret = serv->ssdb->get(key, &val);
 	if(ret == -1){
 		resp->push_back("error");
 	}else{
-		std::string str = str_slice(val, start, size);
+		std::string str = str_slice(val, start, end);
 		int count = bitcount(str.data(), str.size());
 		resp->reply_int(0, count);
 	}
